# CortexRAG

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.prod.yml  docker-compose.yml  walkthrough.md
backend/: .dockerignore  Dockerfile  alembic.ini  check_users.py  pyproject.toml  requirements.txt  reset_db.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py
backend/app/api/v1/: auth.py  documents.py  keys.py  query.py  router.py  usage.py  users.py  websocket.py
backend/app/core/: config.py  deps.py  exceptions.py  logging.py  middleware.py  rate_limiter.py  redis_client.py  sanitizer.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: document.py  query.py  user.py  workspace.py
backend/app/schemas/: auth.py  documents.py  keys.py  query.py  usage.py  user.py  workspace.py
backend/app/services/: auth_service.py  bm25_service.py  chunking_service.py  citation_service.py  context_builder.py  document_lifecycle.py  embedding_service.py  key_service.py  llm_service.py  parser_service.py  query_rewriter.py  reranker_service.py  retrieval_service.py  storage_service.py  summary_service.py  upload_service.py  usage_service.py  user_service.py  vector_search_service.py
backend/app/worker/: celery_app.py
backend/app/worker/tasks/: __init__.py  chunking.py  cleanup.py  embedding.py  extraction.py  ingestion.py
backend/tests/: conftest.py  test_auth.py  test_rag.py  test_rag_eval.py  test_security.py
caddy/: Caddyfile
documents/: project.docx
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
lessons/: index.md  step-02-database-schema.md  step-03-authentication.md  step-04-user-workspace.md  step-07-text-extraction.md  step-09-embeddings.md  step-14-llm-streaming.md  step-16-usage-tracking.md  step-17-conversation-history.md  step-21-frontend-setup.md  step-22-auth-ui.md  step-24-chat-ui.md  step-26-security-hardening.md  step-30-documentation.md
scripts/: copy_testify.py  init_db.sql  ollama_pull.sh  run_e2e_tests.py
testify/: 00_automated_testing_plan.md  00_global_implementation_plan.md  00_global_task_tracker.md  00_global_walkthrough.md  01_step_01_project_setup.md  05_step_05_api_keys_rate_limiting.md  06_step_06_file_upload_storage.md  (+14 more)
(+22 files in other folders)
