[tool.poetry]
name = "cortexrag"
version = "0.1.0"
description = "CortexRAG — AI Document Intelligence Platform"
authors = ["CortexRAG Team"]

[tool.poetry.dependencies]
python = "^3.11"


# --- Web Framework ---
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}

# --- Async & HTTP ---
httpx = "^0.27.0"
anyio = "^4.3.0"

# --- Database ---
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pgvector = "^0.3.2"

# --- Auth & Security ---
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"

# --- Validation ---
pydantic = "^2.7.1"
pydantic-settings = "^2.3.0"
email-validator = "^2.1.1"

# --- File Processing ---
python-multipart = "^0.0.9"
python-magic = "^0.4.27"
pymupdf = "^1.24.3"
python-docx = "^1.1.2"
tiktoken = "^0.7.0"

# --- Object Storage ---
minio = "^7.2.7"

# --- Task Queue ---
celery = {extras = ["redis"], version = "^5.4.0"}
redis = "^5.0.4"

# --- AI / Embeddings ---
# NOTE: Embeddings and LLM inference are handled via Ollama HTTP API (httpx).
# sentence-transformers is NOT used — it would pull PyTorch+CUDA (~22GB bloat).
# Re-ranking is done via Ollama API calls as well.

# --- Logging & Observability ---
structlog = "^24.2.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.5.1"}
opentelemetry-sdk = "^1.25.0"
opentelemetry-instrumentation-fastapi = "^0.46b0"

# --- Elasticsearch ---
elasticsearch = {extras = ["async"], version = "^8.13.0"}

# --- Utilities ---
bleach = "^6.1.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
ruff = "^0.4.9"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]
ignore = ["E501", "B904", "B905", "F821", "SIM102", "C414", "W293", "B007", "SIM117", "F841", "UP042", "B008", "SIM105", "N818", "UP037"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
